<resources>
    <string name="app_name">JobTop</string>
    <string name="search_jobs">Qidiring</string>
    <string name="categories">Kategoriyalar</string>
    <string name="recommended">Tavsiya qilinganlar</string>
    <string name="see_all_jobs">Barcha ishlar</string>
    <string name="info">Ma\'lumotlar</string>
    <string name="requirements">Talablar</string>
    <string name="submit_cv">Rezyume yuborish</string>
    <string name="registration_text"><u>Registratsiyadan o\'tish</u></string>
    <string name="ilova_qoidalari"><u>Ilova qoidalari</u></string>
    <string name="enter">Kirish</string>

    <style name="spinner_title">Qiziqishlaringiz</style>

    <string-array name="animals">
        <item>Cat</item>
        <item>Dog</item>
        <item>Animal</item>
    </string-array>
</resources>