<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/baseWhite"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/drawerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:padding="10dp"
                android:src="@drawable/ic_round_menu_24" />


            <com.imb.jobtop.view.TwoTextTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:bothSize="48"
                app:firstText="Job"
                app:secondText="Top" />

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_search_view"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toTopOf="@id/headerText1"
            app:layout_constraintEnd_toStartOf="@id/mapBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:queryHint="@string/search_jobs" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorTransparent"
            android:src="@drawable/ic_group_225"
            app:layout_constraintBottom_toBottomOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchView"
            app:layout_constraintTop_toTopOf="@id/searchView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/categoryList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/headerText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerText1"
            tools:listitem="@layout/list_item_category" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/recommended"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/jobList"
            app:layout_constraintEnd_toStartOf="@id/seeAllBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryList" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seeAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:drawableTint="@color/blue"
            android:text="@string/see_all_jobs"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@id/headerText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/headerText2"
            app:layout_constraintTop_toTopOf="@id/headerText2" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/jobList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerText2"
            tools:listitem="@layout/list_item_job" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>